styles/styles.css
/* ... */
.projectpicture{
height: 300px;
background-color: #205C65;
background-image: url(../assets/projectswish.png) , url(../assets/racecar.jpg);
background-repeat: no-repeat;
background-position: left, bottom;
background-size: contain , cover;
}
.projectpicture2{
height: 300px;
background-image: url(../assets/projectswish.png) , url(../assets/wall.jpeg);
background-repeat: no-repeat;
background-size: contain , cover;

}
.projectpicture3{
height: 300px;
background-image: url(../assets/projectswish.png) , url(../assets/bench.jpeg);
background-repeat: no-repeat;
background-position: center;
background-position: left;
background-size: contain , cover;

}
h1{
  font-size: 36px;
  text-align: center;
  margin-top: 18px;
}
.projectdesc h2 {
  margin-top: 40px;
  text-align: center;
  position: relative;
  left: 20%;
white-space: nowrap;
}
.projectdesc h3 {
  position: relative;
  left: 20%;
  margin-top: 5px;
white-space: nowrap;
}
.projectdesc a {
  text-align: center;
}
h2{
  color: #ffffff;
  font-family: Roboto;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 35px;

}
h3{
  color: #ffffff;
  text-align: center;
  font-family: Roboto;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: 21px;
}
p {
  text-align: center;
  margin-top: 18px;
  margin-left: 25%;
  margin-right: 25%;
}
.designprocess h2{
  font-size: 48px;
  color: white;
  text-shadow: 2px 2px 4px #000000;
  text-align: center;
}
.designprocess2 h2{
  color: #f9a825;
  font-size: 48px;
  text-shadow: 3px 3px 4px #000000;
text-align: center;
}
.designprocess3 h2{
  color: #ffffff;
  font-size: 48px;
  /* text-shadow: 2px 2px 8px #205C65; */
color: #EA2B2B;
  text-shadow: 2px 2px 4px #000000;
transform: rotate(-30deg);
position: relative;
left: 25%;

}
.designprocess4 h2{
  color: #000000;
  font-size: 48px;
  /* text-shadow: 2px 2px 4px white; */
  text-align: center;
  line-height: 109%;


/* color: white;
mix-blend-mode: exclusion; */

background-image:url(../assets/finalprototype.jpg);
width: 100%;
background-clip: text;
-webkit-background-clip: text;
filter: invert(1) grayscale(1) drop-shadow(0px 0px 1px black);
background-size:cover;
background-repeat: no-repeat;
background-position: center;
color: transparent;

}
.designprocesscontainer{
width: 50%;
height: 0px;
margin: 0 auto;
border-radius: 1px solid black;
overflow: hidden;
border-radius: 10px 10px 10px 10px;
}

.designprocesscontainer2{
width: 50%;
height: 0px;
margin: 0 auto;
border-radius: 1px solid black;
overflow: hidden;
}
.designprocesscontainer3{
width: 50%;
height: 0px;
margin: 0 auto;
border-radius: 1px solid black;
overflow: hidden;
}
.designprocesscontainer4{
width: 50%;
height: 0px;
margin: 0 auto;
border-radius: 1px solid black;
overflow: hidden;
}
#designprocessbutton:checked ~ .designprocesscontainer{
width: 100%;
-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
transition: width 2s, height 3s, transform 1s;
-webkit-transform: rotate(0deg); /* Safari */
transform: rotate(0deg);
overflow: hidden;
height: 664px;
border: 1px black solid;
border-top: 0px;
box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
border-radius: 0px 0px 10px 10px;
}
#designprocessbutton2:checked ~ .designprocesscontainer2{
width: 100%;
-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
transition: width 2s, height 3s, transform 1s;
-webkit-transform: rotate(0deg); /* Safari */
transform: rotate(0deg);
overflow: hidden;
height: 664px;
border: 1px black solid;
border-top: 0px;
box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
border-radius: 0px 0px 10px 10px;
}
#designprocessbutton3:checked ~ .designprocesscontainer3{
width: 95%;
-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
transition: width 2s, height 3s, transform 1s;
-webkit-transform: rotate(0deg); /* Safari */
transform: rotate(0deg);
overflow: hidden;
height: 664px;
border: 1px black solid;
border-top: 0px;
box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
/* border-radius: 0px 0px 10px 10px; */
}
#designprocessbutton4:checked ~ .designprocesscontainer4{
width: 95%;
-webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
transition: width 2s, height 3s, transform 1s;
-webkit-transform: rotate(0deg); /* Safari */
transform: rotate(0deg);
overflow: hidden;
height: 664px;
border: 1px black solid;
border-top: 0px;
box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
border-radius: 0px 0px 10px 10px;
}
.designprocess{
  width: 50%;
  margin-left: 25%;
  margin-right: 25%;
  margin-top: 50px;
  margin-bottom: 0px;
  height: 180px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px black solid;
  box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
  background-image:url(../assets/discoveryandresearch2.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  cursor:pointer;
  z-index: 1;
filter: grayscale(0%);
border-radius: 10px 10px 10px 10px;
}
.designprocess2{
  width: 50%;
  margin-left: 25%;
  margin-right: 25%;
  margin-top: 50px;
  margin-bottom: 0px;
  height: 180px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px black solid;
  box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
  background-image:url(../assets/wall.jpeg);
  background-repeat: no-repeat;
  background-position: center;
  background-color: rgba(0,0,0,0);
  cursor:pointer;
  z-index: 1;
border-radius: 10px 10px 10px 10px;
}
.designprocess3{
  width: 50%;
  margin-left: 25%;
  margin-right: 25%;
  margin-top: 50px;
  margin-bottom: 0px;
  height: 180px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px black solid;
  box-shadow: 10px 15px 10px rgba(0, 0, 0, 0.25);
  background-image:url(../assets/visualdesign.jpg);
  background-size:cover;
  background-repeat: no-repeat;
  background-position: center;
  cursor:pointer;
  z-index: 1;
border-radius: 10px 10px 10px 10px;
}
/* ... */

